added a startup option

--- a/shutdownSound/App.config
+++ b/shutdownSound/App.config
@@ -10,7 +10,10 @@
     </startup>
     <userSettings>
         <shutdownSound.Properties.Settings>
-            <setting name="wavFile" serializeAs="String">
+            <setting name="exitFile" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="startFile" serializeAs="String">
                 <value />
             </setting>
         </shutdownSound.Properties.Settings>
