--- a/shutdownSound/Properties/Settings.settings
+++ b/shutdownSound/Properties/Settings.settings
@@ -2,7 +2,10 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="shutdownSound.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="wavFile" Type="System.String" Scope="User">
+    <Setting Name="exitFile" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="startFile" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
   </Settings>
