hide notifyicon setting, close other opened programs

--- a/shutdownSound/App.config
+++ b/shutdownSound/App.config
@@ -16,6 +16,9 @@
             <setting name="startFile" serializeAs="String">
                 <value />
             </setting>
+            <setting name="notifyIcon" serializeAs="String">
+                <value>False</value>
+            </setting>
         </shutdownSound.Properties.Settings>
     </userSettings>
 </configuration>
