--- a/shutdownSound/shutdownSound.csproj
+++ b/shutdownSound/shutdownSound.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>shutdownSound</RootNamespace>
-    <AssemblyName>Shutdown Sound</AssemblyName>
+    <AssemblyName>Shutdown_Sound</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
