--- a/shutdownSound/Properties/Settings.settings
+++ b/shutdownSound/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="startFile" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="notifyIcon" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
